--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>postgresql</artifactId>
             <version>9.1-901.jdbc3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 </project>
